@@ -28,7 +28,6 @@ import static org.hamcrest.collection.IsIterableContainingInAnyOrder.containsInA
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.argThat;
@@ -38,8 +37,6 @@ import static org.mockito.Mockito.anyBoolean;
 import static org.mockito.Mockito.anyInt;
 import static org.mockito.Mockito.anyLong;
 import static org.mockito.Mockito.anyMap;
-import static org.mockito.Mockito.atLeastOnce;
-import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.eq;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
@@ -79,6 +76,7 @@ import android.util.Pair;
 
 import androidx.test.filters.SmallTest;
 
+import com.android.server.wifi.ClientModeImpl;
 import com.android.server.wifi.Clock;
 import com.android.server.wifi.FakeKeys;
 import com.android.server.wifi.FrameworkFacade;
@@ -101,25 +99,19 @@ import com.android.server.wifi.hotspot2.anqp.DomainNameElement;
 import com.android.server.wifi.hotspot2.anqp.HSOsuProvidersElement;
 import com.android.server.wifi.hotspot2.anqp.I18Name;
 import com.android.server.wifi.hotspot2.anqp.OsuProviderInfo;
-import com.android.server.wifi.hotspot2.anqp.VenueNameElement;
-import com.android.server.wifi.hotspot2.anqp.VenueUrlElement;
 import com.android.server.wifi.proto.nano.WifiMetricsProto.UserActionEvent;
 import com.android.server.wifi.util.InformationElementUtil;
 import com.android.server.wifi.util.InformationElementUtil.RoamingConsortium;
-import com.android.server.wifi.util.WifiPermissionsUtil;
 
 import org.junit.Before;
-import org.junit.BeforeClass;
 import org.junit.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.MockitoSession;
 
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.security.KeyStore;
 import java.security.cert.Certificate;
-import java.security.cert.PKIXParameters;
 import java.security.cert.X509Certificate;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -130,7 +122,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Unit tests for {@link PasspointManager}.
@@ -151,17 +142,6 @@ public class PasspointManagerTest extends WifiBaseTest {
     private static final String FULL_IMSI = "123456789123456";
     private static final int TEST_CARRIER_ID = 10;
     private static final int TEST_SUBID = 1;
-    private static final String TEST_VENUE_URL_ENG = "https://www.google.com/";
-    private static final String TEST_VENUE_URL_HEB = "https://www.google.co.il/";
-    private static final String TEST_LOCALE_ENGLISH = "eng";
-    private static final String TEST_LOCALE_HEBREW = "heb";
-    private static final String TEST_LOCALE_SPANISH = "spa";
-    private static final String TEST_TERMS_AND_CONDITIONS_URL =
-            "https://policies.google.com/terms?hl=en-US";
-    private static final String TEST_TERMS_AND_CONDITIONS_URL_NON_HTTPS =
-            "http://policies.google.com/terms?hl=en-US";
-    private static final String TEST_TERMS_AND_CONDITIONS_URL_INVALID =
-            "httpps://policies.google.com/terms?hl=en-US";
 
     private static final long TEST_BSSID = 0x112233445566L;
     private static final String TEST_SSID = "TestSSID";
@@ -185,10 +165,6 @@ public class PasspointManagerTest extends WifiBaseTest {
     private static final int TEST_CREATOR_UID1 = 1235;
     private static final int TEST_UID = 1500;
     private static final int TEST_NETWORK_ID = 2;
-    private static final String TEST_ANONYMOUS_IDENTITY = "AnonymousIdentity";
-    private static final String USER_CONNECT_CHOICE = "SomeNetworkProfileId";
-    private static final int TEST_RSSI = -50;
-    public static PKIXParameters TEST_PKIX_PARAMETERS;
 
     @Mock Context mContext;
     @Mock WifiNative mWifiNative;
@@ -206,17 +182,16 @@ public class PasspointManagerTest extends WifiBaseTest {
     @Mock OsuNetworkConnection mOsuNetworkConnection;
     @Mock OsuServerConnection mOsuServerConnection;
     @Mock PasspointProvisioner mPasspointProvisioner;
-    @Mock PasspointNetworkNominateHelper mPasspointNetworkNominateHelper;
     @Mock IProvisioningCallback mCallback;
     @Mock WfaKeyStore mWfaKeyStore;
     @Mock KeyStore mKeyStore;
     @Mock AppOpsManager mAppOpsManager;
     @Mock WifiInjector mWifiInjector;
+    @Mock ClientModeImpl mClientModeImpl;
     @Mock TelephonyManager mTelephonyManager;
     @Mock SubscriptionManager mSubscriptionManager;
     @Mock WifiNetworkSuggestionsManager mWifiNetworkSuggestionsManager;
     @Mock MacAddressUtil mMacAddressUtil;
-    @Mock WifiPermissionsUtil mWifiPermissionsUtil;
 
     Handler mHandler;
     TestLooper mLooper;
@@ -224,18 +199,6 @@ public class PasspointManagerTest extends WifiBaseTest {
     ArgumentCaptor<AppOpsManager.OnOpChangedListener> mAppOpChangedListenerCaptor =
             ArgumentCaptor.forClass(AppOpsManager.OnOpChangedListener.class);
     WifiCarrierInfoManager mWifiCarrierInfoManager;
-    ArgumentCaptor<WifiConfigManager.OnNetworkUpdateListener> mNetworkListenerCaptor =
-            ArgumentCaptor.forClass(WifiConfigManager.OnNetworkUpdateListener.class);
-    ArgumentCaptor<SubscriptionManager.OnSubscriptionsChangedListener> mSubscriptionsCaptor =
-            ArgumentCaptor.forClass(SubscriptionManager.OnSubscriptionsChangedListener.class);
-
-    @BeforeClass
-    public static void setUpBeforeClass() throws Exception {
-        KeyStore keyStore = KeyStore.getInstance("AndroidCAStore");
-        keyStore.load(null, null);
-        TEST_PKIX_PARAMETERS = new PKIXParameters(keyStore);
-        TEST_PKIX_PARAMETERS.setRevocationEnabled(false);
-    }
 
     /** Sets up test. */
     @Before
@@ -254,28 +217,20 @@ public class PasspointManagerTest extends WifiBaseTest {
                 any(PasspointManager.class), any(WifiMetrics.class)))
                 .thenReturn(mPasspointProvisioner);
         when(mContext.getSystemService(Context.APP_OPS_SERVICE)).thenReturn(mAppOpsManager);
+        when(mWifiInjector.getClientModeImpl()).thenReturn(mClientModeImpl);
         when(mWifiInjector.getWifiNetworkSuggestionsManager())
                 .thenReturn(mWifiNetworkSuggestionsManager);
-        when(mWifiPermissionsUtil.doesUidBelongToCurrentUserOrDeviceOwner(anyInt()))
-                .thenReturn(true);
-        mLooper = new TestLooper();
-        mHandler = new Handler(mLooper.getLooper());
         mWifiCarrierInfoManager = new WifiCarrierInfoManager(mTelephonyManager,
                 mSubscriptionManager, mWifiInjector, mock(FrameworkFacade.class),
-                mock(WifiContext.class), mWifiConfigStore, mHandler, mWifiMetrics, mClock);
-        verify(mSubscriptionManager).addOnSubscriptionsChangedListener(any(),
-                mSubscriptionsCaptor.capture());
+                mock(WifiContext.class), mWifiConfigStore, mock(Handler.class), mWifiMetrics);
+        mLooper = new TestLooper();
+        mHandler = new Handler(mLooper.getLooper());
         mManager = new PasspointManager(mContext, mWifiInjector, mHandler, mWifiNative,
                 mWifiKeyStore, mClock, mObjectFactory, mWifiConfigManager,
-                mWifiConfigStore, mWifiMetrics, mWifiCarrierInfoManager, mMacAddressUtil,
-                mWifiPermissionsUtil);
-        mManager.setPasspointNetworkNominateHelper(mPasspointNetworkNominateHelper);
-        mManager.setUseInjectedPKIX(true);
-        mManager.injectPKIXParameters(TEST_PKIX_PARAMETERS);
-
+                mWifiConfigStore, mWifiMetrics, mWifiCarrierInfoManager, mMacAddressUtil);
         ArgumentCaptor<PasspointEventHandler.Callbacks> callbacks =
                 ArgumentCaptor.forClass(PasspointEventHandler.Callbacks.class);
-        verify(mObjectFactory).makePasspointEventHandler(any(WifiInjector.class),
+        verify(mObjectFactory).makePasspointEventHandler(any(WifiNative.class),
                                                          callbacks.capture());
         ArgumentCaptor<PasspointConfigSharedStoreData.DataSource> sharedDataSource =
                 ArgumentCaptor.forClass(PasspointConfigSharedStoreData.DataSource.class);
@@ -283,14 +238,13 @@ public class PasspointManagerTest extends WifiBaseTest {
         ArgumentCaptor<PasspointConfigUserStoreData.DataSource> userDataSource =
                 ArgumentCaptor.forClass(PasspointConfigUserStoreData.DataSource.class);
         verify(mObjectFactory).makePasspointConfigUserStoreData(any(WifiKeyStore.class),
-                any(WifiCarrierInfoManager.class), userDataSource.capture(), any(Clock.class));
+                any(WifiCarrierInfoManager.class), userDataSource.capture());
         mCallbacks = callbacks.getValue();
         mSharedDataSource = sharedDataSource.getValue();
         mUserDataSource = userDataSource.getValue();
         // SIM is absent
         when(mSubscriptionManager.getActiveSubscriptionInfoList())
                 .thenReturn(Collections.emptyList());
-        verify(mWifiConfigManager).addOnNetworkUpdateListener(mNetworkListenerCaptor.capture());
     }
 
     /**
@@ -417,12 +371,10 @@ public class PasspointManagerTest extends WifiBaseTest {
         PasspointProvider provider = createMockProvider(config, wifiConfig, isSuggestion);
         when(mObjectFactory.makePasspointProvider(eq(config), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(isSuggestion), eq(mClock))).thenReturn(provider);
+                eq(isSuggestion))).thenReturn(provider);
         when(provider.getPackageName()).thenReturn(packageName);
         assertTrue(mManager.addOrUpdateProvider(
                 config, TEST_CREATOR_UID, TEST_PACKAGE, isSuggestion, true));
-        verify(mPasspointNetworkNominateHelper, atLeastOnce())
-                .refreshPasspointNetworkCandidates(isSuggestion);
         return provider;
     }
 
@@ -492,7 +444,7 @@ public class PasspointManagerTest extends WifiBaseTest {
 
         when(mAnqpRequestManager.onRequestCompleted(TEST_BSSID, true)).thenReturn(TEST_ANQP_KEY);
         mCallbacks.onANQPResponse(TEST_BSSID, anqpElementMap);
-        verify(mAnqpCache).addOrUpdateEntry(TEST_ANQP_KEY, anqpElementMap);
+        verify(mAnqpCache).addEntry(TEST_ANQP_KEY, anqpElementMap);
         verify(mContext, never()).sendBroadcastAsUser(any(Intent.class), any(UserHandle.class),
                 any(String.class));
     }
@@ -511,7 +463,7 @@ public class PasspointManagerTest extends WifiBaseTest {
 
         when(mAnqpRequestManager.onRequestCompleted(TEST_BSSID, true)).thenReturn(null);
         mCallbacks.onANQPResponse(TEST_BSSID, anqpElementMap);
-        verify(mAnqpCache, never()).addOrUpdateEntry(any(ANQPNetworkKey.class), anyMap());
+        verify(mAnqpCache, never()).addEntry(any(ANQPNetworkKey.class), anyMap());
     }
 
     /**
@@ -523,7 +475,7 @@ public class PasspointManagerTest extends WifiBaseTest {
     public void anqpResponseFailure() throws Exception {
         when(mAnqpRequestManager.onRequestCompleted(TEST_BSSID, false)).thenReturn(TEST_ANQP_KEY);
         mCallbacks.onANQPResponse(TEST_BSSID, null);
-        verify(mAnqpCache, never()).addOrUpdateEntry(any(ANQPNetworkKey.class), anyMap());
+        verify(mAnqpCache, never()).addEntry(any(ANQPNetworkKey.class), anyMap());
 
     }
 
@@ -572,30 +524,6 @@ public class PasspointManagerTest extends WifiBaseTest {
     }
 
     /**
-     * Verify that adding a provider from a background user will fail.
-     *
-     * @throws Exception
-     */
-    @Test
-    public void addProviderWithBackgroundUser() throws Exception {
-        when(mWifiPermissionsUtil.doesUidBelongToCurrentUserOrDeviceOwner(anyInt()))
-                .thenReturn(false);
-
-        PasspointConfiguration config = createTestConfigWithUserCredential(TEST_FQDN,
-                TEST_FRIENDLY_NAME);
-        PasspointProvider provider = createMockProvider(config);
-        when(provider.getPackageName()).thenReturn(TEST_PACKAGE);
-        when(mObjectFactory.makePasspointProvider(eq(config), eq(mWifiKeyStore),
-                eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(false), eq(mClock))).thenReturn(provider);
-        assertFalse(mManager.addOrUpdateProvider(config, TEST_CREATOR_UID,
-                TEST_PACKAGE, false, true));
-
-        verify(mWifiMetrics).incrementNumPasspointProviderInstallation();
-        verify(mWifiMetrics, never()).incrementNumPasspointProviderInstallSuccess();
-    }
-
-    /**
      * Verify that adding a user saved provider with a valid configuration and user credential will
      * succeed.
      *
@@ -608,7 +536,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         when(provider.getPackageName()).thenReturn(TEST_PACKAGE);
         when(mObjectFactory.makePasspointProvider(eq(config), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(false), eq(mClock))).thenReturn(provider);
+                eq(false))).thenReturn(provider);
         assertTrue(mManager.addOrUpdateProvider(config, TEST_CREATOR_UID, TEST_PACKAGE,
                 false, true));
         verifyInstalledConfig(config);
@@ -642,7 +570,7 @@ public class PasspointManagerTest extends WifiBaseTest {
 
         verify(provider).uninstallCertsAndKeys();
         verify(mWifiConfigManager, times(3)).removePasspointConfiguredNetwork(
-                provider.getWifiConfig().getProfileKey());
+                provider.getWifiConfig().getKey());
         /**
          * 1 from |removeProvider| + 2 from |setAutojoinEnabled| + 2 from
          * |enableMacRandomization| + 2 from |setMeteredOverride| = 7 calls to |saveToStore|
@@ -652,7 +580,6 @@ public class PasspointManagerTest extends WifiBaseTest {
         verify(mWifiMetrics).incrementNumPasspointProviderUninstallSuccess();
         verify(mAppOpsManager).stopWatchingMode(any(AppOpsManager.OnOpChangedListener.class));
         assertTrue(mManager.getProviderConfigs(TEST_CREATOR_UID, false).isEmpty());
-        verify(mWifiConfigManager).removeConnectChoiceFromAllNetworks(config.getUniqueId());
 
         // Verify content in the data source.
         assertTrue(mUserDataSource.getProviders().isEmpty());
@@ -728,7 +655,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         assertTrue(mManager.enableMacRandomization(provider.getConfig().getHomeSp().getFqdn(),
                 true));
         verify(mWifiConfigManager, times(2)).removePasspointConfiguredNetwork(
-                provider.getWifiConfig().getProfileKey());
+                provider.getWifiConfig().getKey());
         verify(mWifiMetrics).logUserActionEvent(
                 UserActionEvent.EVENT_CONFIGURE_MAC_RANDOMIZATION_ON, false, true);
         verify(provider).setMacRandomizationEnabled(true);
@@ -765,7 +692,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         PasspointProvider provider = createMockProvider(config);
         when(mObjectFactory.makePasspointProvider(eq(config), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(false), eq(mClock))).thenReturn(provider);
+                eq(false))).thenReturn(provider);
         assertTrue(mManager.addOrUpdateProvider(config, TEST_CREATOR_UID, TEST_PACKAGE,
                 false, true));
         verifyInstalledConfig(config);
@@ -786,12 +713,11 @@ public class PasspointManagerTest extends WifiBaseTest {
         assertTrue(mManager.removeProvider(TEST_UID, true, null, TEST_FQDN));
         verify(provider).uninstallCertsAndKeys();
         verify(mWifiConfigManager).removePasspointConfiguredNetwork(
-                provider.getWifiConfig().getProfileKey());
+                provider.getWifiConfig().getKey());
         verify(mWifiConfigManager).saveToStore(true);
         verify(mWifiMetrics).incrementNumPasspointProviderUninstallation();
         verify(mWifiMetrics).incrementNumPasspointProviderUninstallSuccess();
         assertTrue(mManager.getProviderConfigs(TEST_UID, true).isEmpty());
-        verify(mWifiConfigManager).removeConnectChoiceFromAllNetworks(config.getUniqueId());
 
         // Verify content in the data source.
         assertTrue(mUserDataSource.getProviders().isEmpty());
@@ -816,12 +742,10 @@ public class PasspointManagerTest extends WifiBaseTest {
         TelephonyManager specifiedTm = mock(TelephonyManager.class);
         when(mTelephonyManager.createForSubscriptionId(eq(TEST_SUBID))).thenReturn(specifiedTm);
         when(specifiedTm.getSubscriberId()).thenReturn(FULL_IMSI);
-        when(specifiedTm.getSimApplicationState()).thenReturn(TelephonyManager.SIM_STATE_LOADED);
         List<SubscriptionInfo> subInfoList = new ArrayList<SubscriptionInfo>() {{
                 add(subInfo);
             }};
         when(mSubscriptionManager.getActiveSubscriptionInfoList()).thenReturn(subInfoList);
-        mSubscriptionsCaptor.getValue().onSubscriptionsChanged();
         when(mWifiKeyStore.putCaCertInKeyStore(any(String.class), any(Certificate.class)))
                 .thenReturn(true);
         PasspointObjectFactory spyFactory = spy(new PasspointObjectFactory());
@@ -829,13 +753,18 @@ public class PasspointManagerTest extends WifiBaseTest {
                 .thenReturn(true);
         PasspointManager ut = new PasspointManager(mContext, mWifiInjector, mHandler, mWifiNative,
                 mWifiKeyStore, mClock, spyFactory, mWifiConfigManager,
-                mWifiConfigStore, mWifiMetrics, mWifiCarrierInfoManager, mMacAddressUtil,
-                mWifiPermissionsUtil);
+                mWifiConfigStore, mWifiMetrics, mWifiCarrierInfoManager, mMacAddressUtil);
 
         assertTrue(ut.addOrUpdateProvider(config, TEST_CREATOR_UID, TEST_PACKAGE,
                 true, true));
 
         assertEquals(TEST_CARRIER_ID, config.getCarrierId());
+        List<String> passpointProfilesList = new ArrayList<String>(){{
+                add(config.getUniqueId());
+            }};
+        assertEquals(TEST_CARRIER_ID,
+                ut.getWifiConfigsForPasspointProfiles(passpointProfilesList).get(0).carrierId);
+
     }
 
     /**
@@ -852,16 +781,13 @@ public class PasspointManagerTest extends WifiBaseTest {
         PasspointProvider origProvider = createMockProvider(origConfig);
         when(mObjectFactory.makePasspointProvider(eq(origConfig), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(false), eq(mClock))).thenReturn(origProvider);
+                eq(false))).thenReturn(origProvider);
         assertTrue(mManager.addOrUpdateProvider(origConfig, TEST_CREATOR_UID, TEST_PACKAGE,
                 false, true));
         verifyInstalledConfig(origConfig);
         verify(mWifiConfigManager).saveToStore(true);
         verify(mWifiMetrics).incrementNumPasspointProviderInstallation();
         verify(mWifiMetrics).incrementNumPasspointProviderInstallSuccess();
-        verify(origProvider, never()).setUserConnectChoice(any(), anyInt());
-        verify(origProvider, never()).setAutojoinEnabled(anyBoolean());
-        verify(origProvider, never()).setAnonymousIdentity(any());
         reset(mWifiMetrics);
         reset(mWifiConfigManager);
 
@@ -874,18 +800,15 @@ public class PasspointManagerTest extends WifiBaseTest {
         // Add same provider as existing suggestion provider
         // This should be no WifiConfig deletion
         WifiConfiguration origWifiConfig = origProvider.getWifiConfig();
-        when(mWifiConfigManager.getConfiguredNetwork(origWifiConfig.getProfileKey()))
+        when(mWifiConfigManager.getConfiguredNetwork(origWifiConfig.getKey()))
                 .thenReturn(origWifiConfig);
         when(mWifiConfigManager.addOrUpdateNetwork(
                 origWifiConfig, TEST_CREATOR_UID, TEST_PACKAGE))
                 .thenReturn(new NetworkUpdateResult(TEST_NETWORK_ID));
-        when(origProvider.getAnonymousIdentity()).thenReturn(TEST_ANONYMOUS_IDENTITY);
-        when(origProvider.getConnectChoice()).thenReturn(USER_CONNECT_CHOICE);
-        when(origProvider.getConnectChoiceRssi()).thenReturn(TEST_RSSI);
         assertTrue(mManager.addOrUpdateProvider(origConfig, TEST_CREATOR_UID, TEST_PACKAGE,
                 false, true));
         verify(mWifiConfigManager, never()).removePasspointConfiguredNetwork(
-                origWifiConfig.getProfileKey());
+                origWifiConfig.getKey());
         verify(mWifiConfigManager).addOrUpdateNetwork(
                 argThat((c) -> c.FQDN.equals(TEST_FQDN)), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE));
         verify(mWifiConfigManager).allowAutojoin(TEST_NETWORK_ID, origWifiConfig.allowAutojoin);
@@ -893,9 +816,6 @@ public class PasspointManagerTest extends WifiBaseTest {
         verify(mWifiMetrics).incrementNumPasspointProviderInstallation();
         verify(mWifiMetrics).incrementNumPasspointProviderInstallSuccess();
         assertEquals(2, mSharedDataSource.getProviderIndex());
-        // Update provider will keep the user settings from the existing provider.
-        verify(origProvider).setUserConnectChoice(eq(USER_CONNECT_CHOICE), eq(TEST_RSSI));
-        verify(origProvider).setAnonymousIdentity(eq(TEST_ANONYMOUS_IDENTITY));
         reset(mWifiMetrics);
         reset(mWifiConfigManager);
 
@@ -906,9 +826,9 @@ public class PasspointManagerTest extends WifiBaseTest {
         PasspointProvider newProvider = createMockProvider(newConfig);
         when(mObjectFactory.makePasspointProvider(eq(newConfig), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(false), eq(mClock))).thenReturn(newProvider);
-        when(mWifiConfigManager.getConfiguredNetwork(origProvider.getWifiConfig()
-                .getProfileKey())).thenReturn(origWifiConfig);
+                eq(false))).thenReturn(newProvider);
+        when(mWifiConfigManager.getConfiguredNetwork(origProvider.getWifiConfig().getKey()))
+                .thenReturn(origWifiConfig);
         assertTrue(mManager.addOrUpdateProvider(newConfig, TEST_CREATOR_UID, TEST_PACKAGE,
                 false, true));
 
@@ -944,8 +864,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         when(provider.installCertsAndKeys()).thenReturn(false);
         when(mObjectFactory.makePasspointProvider(eq(config), eq(mWifiKeyStore), eq(
                 mWifiCarrierInfoManager),
-                anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE), eq(false),
-                eq(mClock))).thenReturn(provider);
+                anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE), eq(false))).thenReturn(provider);
         assertFalse(mManager.addOrUpdateProvider(config, TEST_CREATOR_UID, TEST_PACKAGE,
                 false, true));
         verify(mWifiMetrics).incrementNumPasspointProviderInstallation();
@@ -965,7 +884,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         PasspointProvider provider = createMockProvider(config);
         when(mObjectFactory.makePasspointProvider(eq(config), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(false), eq(mClock))).thenReturn(provider);
+                eq(false))).thenReturn(provider);
         assertTrue(mManager.addOrUpdateProvider(config, TEST_CREATOR_UID, TEST_PACKAGE,
                 false, true));
         verifyInstalledConfig(config);
@@ -987,7 +906,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         PasspointProvider provider = createMockProvider(config);
         when(mObjectFactory.makePasspointProvider(eq(config), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(false), eq(mClock))).thenReturn(provider);
+                eq(false))).thenReturn(provider);
         assertTrue(mManager.addOrUpdateProvider(config, TEST_CREATOR_UID, TEST_PACKAGE,
                 false, true));
         verifyInstalledConfig(config);
@@ -1062,7 +981,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         ANQPData entry = new ANQPData(mClock, null);
 
         when(mAnqpCache.getEntry(TEST_ANQP_KEY)).thenReturn(entry);
-        when(provider.match(anyMap(), any(RoamingConsortium.class), any(ScanResult.class)))
+        when(provider.match(anyMap(), any(RoamingConsortium.class)))
             .thenReturn(PasspointMatch.HomeProvider);
         List<Pair<PasspointProvider, PasspointMatch>> results =
                 mManager.matchProvider(createTestScanResult());
@@ -1083,7 +1002,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         ANQPData entry = new ANQPData(mClock, null);
 
         when(mAnqpCache.getEntry(TEST_ANQP_KEY)).thenReturn(entry);
-        when(provider.match(anyMap(), any(RoamingConsortium.class), any(ScanResult.class)))
+        when(provider.match(anyMap(), any(RoamingConsortium.class)))
             .thenReturn(PasspointMatch.RoamingProvider);
         List<Pair<PasspointProvider, PasspointMatch>> results =
                 mManager.matchProvider(createTestScanResult());
@@ -1105,9 +1024,9 @@ public class PasspointManagerTest extends WifiBaseTest {
                 addTestProvider(TEST_FQDN2, TEST_FRIENDLY_NAME2, TEST_PACKAGE1, false, null);
         ANQPData entry = new ANQPData(mClock, null);
         when(mAnqpCache.getEntry(TEST_ANQP_KEY)).thenReturn(entry);
-        when(roamingProvider1.match(anyMap(), any(RoamingConsortium.class), any(ScanResult.class)))
+        when(roamingProvider1.match(anyMap(), any(RoamingConsortium.class)))
                 .thenReturn(PasspointMatch.RoamingProvider);
-        when(roamingProvider2.match(anyMap(), any(RoamingConsortium.class), any(ScanResult.class)))
+        when(roamingProvider2.match(anyMap(), any(RoamingConsortium.class)))
                 .thenReturn(PasspointMatch.RoamingProvider);
         List<Pair<PasspointProvider, PasspointMatch>> results =
                 mManager.matchProvider(createTestScanResult());
@@ -1121,9 +1040,9 @@ public class PasspointManagerTest extends WifiBaseTest {
                 addTestProvider(TEST_FQDN + "home", TEST_FRIENDLY_NAME, TEST_PACKAGE, false, null);
         PasspointProvider homeProvider2 = addTestProvider(TEST_FQDN2 + "home", TEST_FRIENDLY_NAME2,
                 TEST_PACKAGE1, false, null);
-        when(homeProvider1.match(anyMap(), any(RoamingConsortium.class), any(ScanResult.class)))
+        when(homeProvider1.match(anyMap(), any(RoamingConsortium.class)))
                 .thenReturn(PasspointMatch.HomeProvider);
-        when(homeProvider2.match(anyMap(), any(RoamingConsortium.class), any(ScanResult.class)))
+        when(homeProvider2.match(anyMap(), any(RoamingConsortium.class)))
                 .thenReturn(PasspointMatch.HomeProvider);
         results = mManager.matchProvider(createTestScanResult());
         // When home providers are available, should return all home providers.
@@ -1145,7 +1064,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         ANQPData entry = new ANQPData(mClock, null);
 
         when(mAnqpCache.getEntry(TEST_ANQP_KEY)).thenReturn(entry);
-        when(provider.match(anyMap(), any(RoamingConsortium.class), any(ScanResult.class)))
+        when(provider.match(anyMap(), any(RoamingConsortium.class)))
             .thenReturn(PasspointMatch.None);
         assertTrue(mManager.matchProvider(createTestScanResult()).isEmpty());
     }
@@ -1210,7 +1129,7 @@ public class PasspointManagerTest extends WifiBaseTest {
 
             when(mAnqpCache.getEntry(TEST_ANQP_KEY2)).thenReturn(entry);
             when(InformationElementUtil.getHS2VendorSpecificIE(isNull())).thenReturn(vsa);
-            when(provider.match(anyMap(), isNull(), any(ScanResult.class)))
+            when(provider.match(anyMap(), isNull()))
                     .thenReturn(PasspointMatch.HomeProvider);
 
             List<Pair<PasspointProvider, PasspointMatch>> matchedProviders =
@@ -1249,11 +1168,11 @@ public class PasspointManagerTest extends WifiBaseTest {
 
             when(mAnqpCache.getEntry(TEST_ANQP_KEY2)).thenReturn(entry);
             when(InformationElementUtil.getHS2VendorSpecificIE(isNull())).thenReturn(vsa);
-            when(providerHome.match(anyMap(), isNull(), any(ScanResult.class)))
+            when(providerHome.match(anyMap(), isNull()))
                     .thenReturn(PasspointMatch.HomeProvider);
-            when(providerRoaming.match(anyMap(), isNull(), any(ScanResult.class)))
+            when(providerRoaming.match(anyMap(), isNull()))
                     .thenReturn(PasspointMatch.RoamingProvider);
-            when(providerNone.match(anyMap(), isNull(), any(ScanResult.class)))
+            when(providerNone.match(anyMap(), isNull()))
                     .thenReturn(PasspointMatch.None);
 
             Map<String, Map<Integer, List<ScanResult>>> configs =
@@ -1279,50 +1198,39 @@ public class PasspointManagerTest extends WifiBaseTest {
 
     /**
      * Verify that an expected list of {@link WifiConfiguration} will be returned when provided
-     * a list of FQDN is matched to installed Passpoint profiles which is already added into the
-     * WifiConfigManager. For suggestion passpoint network, will check if that suggestion share
-     * credential with user to choose from wifi picker.
-     * - Provider1 and Provider2 are saved passpoint, Provider1 is already added into the
-     * WifiConfigManger
-     * - Provider3 and Provider4 are suggestion passpoint, only Provider4 is shared with user. Both
-     * providers are already added into the WifiConfigManager
-     * - Expected result: Provider1 and Provider4 should be returned .
+     * a list of FQDN is matched to installed Passpoint profiles. For suggestion passpoint network,
+     * will check if that suggestion share credential with user to choose from wifi picker.
      */
     @Test
     public void getWifiConfigsForPasspointProfiles() {
         PasspointProvider provider1 = addTestProvider(TEST_FQDN, TEST_FRIENDLY_NAME,
                 TEST_PACKAGE, false, null);
-        WifiConfiguration config1 = provider1.getWifiConfig();
-        when(mWifiConfigManager.getConfiguredNetwork(provider1.getConfig().getUniqueId()))
-                .thenReturn(config1);
         PasspointProvider provider2 = addTestProvider(TEST_FQDN + 1, TEST_FRIENDLY_NAME,
                 TEST_PACKAGE, false, null);
         PasspointProvider provider3 = addTestProvider(TEST_FQDN + 2, TEST_FRIENDLY_NAME,
-                TEST_PACKAGE, true, null);
-        when(mWifiNetworkSuggestionsManager
-                .isPasspointSuggestionSharedWithUser(provider3.getWifiConfig())).thenReturn(false);
-        WifiConfiguration config3 = provider3.getWifiConfig();
-        when(mWifiConfigManager.getConfiguredNetwork(provider3.getConfig().getUniqueId()))
-                .thenReturn(config3);
+                TEST_PACKAGE, false, null);
+
+        assertEquals(3, mManager.getWifiConfigsForPasspointProfiles(
+                Arrays.asList(provider1.getConfig().getUniqueId(),
+                        provider2.getConfig().getUniqueId(), provider3.getConfig().getUniqueId(),
+                        TEST_FQDN + "_353ab8c93", TEST_FQDN + "_83765319aca")).size());
         PasspointProvider provider4 = addTestProvider(TEST_FQDN + 3, TEST_FRIENDLY_NAME,
                 TEST_PACKAGE, true, null);
         when(mWifiNetworkSuggestionsManager
-                .isPasspointSuggestionSharedWithUser(provider4.getWifiConfig())).thenReturn(true);
-        WifiConfiguration config4 = provider4.getWifiConfig();
-        when(mWifiConfigManager.getConfiguredNetwork(provider4.getConfig().getUniqueId()))
-                .thenReturn(config4);
-
-        List<WifiConfiguration> wifiConfigurationList = mManager.getWifiConfigsForPasspointProfiles(
-                List.of(provider1.getConfig().getUniqueId(), provider2.getConfig().getUniqueId(),
-                        provider3.getConfig().getUniqueId(), provider4.getConfig().getUniqueId(),
-                        TEST_FQDN + "_353ab8c93", TEST_FQDN + "_83765319aca"));
-        assertEquals(2, wifiConfigurationList.size());
-        Set<String> uniqueIdSet = wifiConfigurationList
-                .stream()
-                .map(WifiConfiguration::getPasspointUniqueId)
-                .collect(Collectors.toSet());
-        assertTrue(uniqueIdSet.contains(provider1.getConfig().getUniqueId()));
-        assertTrue(uniqueIdSet.contains(provider4.getConfig().getUniqueId()));
+                .isPasspointSuggestionSharedWithUser(provider4.getWifiConfig())).thenReturn(false);
+        assertEquals(3, mManager.getWifiConfigsForPasspointProfiles(
+                Arrays.asList(provider1.getConfig().getUniqueId(),
+                        provider2.getConfig().getUniqueId(), provider3.getConfig().getUniqueId(),
+                        provider4.getConfig().getUniqueId(), TEST_FQDN + "_83765319aca")).size());
+        PasspointProvider provider5 = addTestProvider(TEST_FQDN + 4, TEST_FRIENDLY_NAME,
+                TEST_PACKAGE, true, null);
+        when(mWifiNetworkSuggestionsManager
+                .isPasspointSuggestionSharedWithUser(provider5.getWifiConfig())).thenReturn(true);
+        assertEquals(4, mManager.getWifiConfigsForPasspointProfiles(
+                Arrays.asList(provider1.getConfig().getUniqueId(),
+                        provider2.getConfig().getUniqueId(), provider3.getConfig().getUniqueId(),
+                        provider4.getConfig().getUniqueId(), provider5.getConfig().getUniqueId()))
+                .size());
     }
 
     /**
@@ -1333,17 +1241,12 @@ public class PasspointManagerTest extends WifiBaseTest {
     public void getWifiConfigsForPasspointProfilesWithoutEnhancedMacRandomization() {
         MacAddress randomizedMacAddress = MacAddress.fromString("01:23:45:67:89:ab");
         when(mMacAddressUtil.calculatePersistentMac(any(), any())).thenReturn(randomizedMacAddress);
-        when(mWifiConfigManager.shouldUseEnhancedRandomization(any())).thenReturn(false);
+        when(mWifiConfigManager.shouldUseAggressiveRandomization(any())).thenReturn(false);
         PasspointProvider provider = addTestProvider(TEST_FQDN, TEST_FRIENDLY_NAME,
                 TEST_PACKAGE, false, null);
-        WifiConfiguration configuration = provider.getWifiConfig();
-        when(mWifiConfigManager.getConfiguredNetwork(provider.getConfig().getUniqueId()))
-                .thenReturn(configuration);
         WifiConfiguration config = mManager.getWifiConfigsForPasspointProfiles(
                 Collections.singletonList(provider.getConfig().getUniqueId())).get(0);
         assertEquals(config.getRandomizedMacAddress(), randomizedMacAddress);
-        verify(mMacAddressUtil).calculatePersistentMac(
-                eq(provider.getConfig().getUniqueId()), any());
     }
 
     /**
@@ -1355,12 +1258,9 @@ public class PasspointManagerTest extends WifiBaseTest {
     public void getWifiConfigsForPasspointProfilesWithEnhancedMacRandomization() {
         MacAddress randomizedMacAddress = MacAddress.fromString("01:23:45:67:89:ab");
         when(mMacAddressUtil.calculatePersistentMac(any(), any())).thenReturn(randomizedMacAddress);
-        when(mWifiConfigManager.shouldUseEnhancedRandomization(any())).thenReturn(true);
+        when(mWifiConfigManager.shouldUseAggressiveRandomization(any())).thenReturn(true);
         PasspointProvider provider = addTestProvider(TEST_FQDN, TEST_FRIENDLY_NAME,
                 TEST_PACKAGE, false, null);
-        WifiConfiguration configuration = provider.getWifiConfig();
-        when(mWifiConfigManager.getConfiguredNetwork(provider.getConfig().getUniqueId()))
-                .thenReturn(configuration);
         WifiConfiguration config = mManager.getWifiConfigsForPasspointProfiles(
                 Collections.singletonList(provider.getConfig().getUniqueId())).get(0);
         assertEquals(config.getRandomizedMacAddress(), MacAddress.fromString(DEFAULT_MAC_ADDRESS));
@@ -1646,7 +1546,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         // Verify the provider ID used to create the new provider.
         when(mObjectFactory.makePasspointProvider(eq(config), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), eq(providerIndex), eq(TEST_CREATOR_UID),
-                eq(TEST_PACKAGE), eq(false), eq(mClock))).thenReturn(provider);
+                eq(TEST_PACKAGE), eq(false))).thenReturn(provider);
 
         assertTrue(
                 mManager.addOrUpdateProvider(config, TEST_CREATOR_UID, TEST_PACKAGE, false, true));
@@ -1968,6 +1868,7 @@ public class PasspointManagerTest extends WifiBaseTest {
     public void verifyRemovingPasspointProfilesWhenAppIsDisabled() {
         WifiConfiguration currentConfiguration = WifiConfigurationTestUtil.createPasspointNetwork();
         currentConfiguration.FQDN = TEST_FQDN;
+        when(mClientModeImpl.getCurrentWifiConfiguration()).thenReturn(currentConfiguration);
         PasspointProvider passpointProvider =
                 addTestProvider(TEST_FQDN, TEST_FRIENDLY_NAME, TEST_PACKAGE, false, null);
         currentConfiguration.setPasspointUniqueId(passpointProvider.getConfig().getUniqueId());
@@ -1986,8 +1887,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         mLooper.dispatchAll();
 
         verify(mAppOpsManager).stopWatchingMode(mAppOpChangedListenerCaptor.getValue());
-        verify(mWifiConfigManager).removePasspointConfiguredNetwork(
-                passpointProvider.getWifiConfig().getProfileKey());
+        verify(mClientModeImpl).disconnectCommand();
         assertTrue(mManager.getProviderConfigs(TEST_CREATOR_UID, true).isEmpty());
     }
 
@@ -2003,7 +1903,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         PasspointProvider provider = createMockProvider(config);
         when(mObjectFactory.makePasspointProvider(eq(config), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(false), eq(mClock))).thenReturn(provider);
+                eq(false))).thenReturn(provider);
         assertTrue(mManager.addOrUpdateProvider(config, TEST_CREATOR_UID, TEST_PACKAGE,
                 false, true));
         verifyInstalledConfig(config);
@@ -2032,30 +1932,6 @@ public class PasspointManagerTest extends WifiBaseTest {
     }
 
     /**
-     * Verify that removing a provider from a background user will fail.
-     *
-     * @throws Exception
-     */
-    @Test
-    public void removeProviderWithBackgroundUser() throws Exception {
-        PasspointConfiguration config = createTestConfigWithUserCredential(TEST_FQDN,
-                TEST_FRIENDLY_NAME);
-        PasspointProvider provider = createMockProvider(config);
-        when(mObjectFactory.makePasspointProvider(eq(config), eq(mWifiKeyStore),
-                eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(false), eq(mClock))).thenReturn(provider);
-        assertTrue(mManager.addOrUpdateProvider(config, TEST_CREATOR_UID, TEST_PACKAGE,
-                false, true));
-        verifyInstalledConfig(config);
-        verify(mWifiMetrics).incrementNumPasspointProviderInstallation();
-        verify(mWifiMetrics).incrementNumPasspointProviderInstallSuccess();
-
-        when(mWifiPermissionsUtil.doesUidBelongToCurrentUserOrDeviceOwner(anyInt()))
-                .thenReturn(false);
-        assertFalse(mManager.removeProvider(TEST_CREATOR_UID, false, null, TEST_FQDN));
-    }
-
-    /**
      * Verify that adding a suggestion provider with a valid configuration and user credential will
      * succeed.
      *
@@ -2070,7 +1946,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         when(provider.isFromSuggestion()).thenReturn(true);
         when(mObjectFactory.makePasspointProvider(eq(config), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(true), eq(mClock))).thenReturn(provider);
+                eq(true))).thenReturn(provider);
         assertTrue(mManager.addOrUpdateProvider(config, TEST_CREATOR_UID, TEST_PACKAGE,
                 true, true));
         verify(mWifiMetrics).incrementNumPasspointProviderInstallation();
@@ -2092,7 +1968,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         assertFalse(mManager.removeProvider(TEST_UID, false, null, TEST_FQDN));
         verify(provider, never()).uninstallCertsAndKeys();
         verify(mWifiConfigManager, never()).removePasspointConfiguredNetwork(
-                provider.getWifiConfig().getProfileKey());
+                provider.getWifiConfig().getKey());
         verify(mWifiConfigManager, never()).saveToStore(true);
         verify(mWifiMetrics).incrementNumPasspointProviderUninstallation();
         verify(mWifiMetrics, never()).incrementNumPasspointProviderUninstallSuccess();
@@ -2111,13 +1987,12 @@ public class PasspointManagerTest extends WifiBaseTest {
         assertTrue(mManager.removeProvider(TEST_CREATOR_UID, false, null, TEST_FQDN));
         verify(provider).uninstallCertsAndKeys();
         verify(mWifiConfigManager).removePasspointConfiguredNetwork(
-                provider.getWifiConfig().getProfileKey());
+                provider.getWifiConfig().getKey());
         verify(mWifiConfigManager).saveToStore(true);
         verify(mWifiMetrics).incrementNumPasspointProviderUninstallation();
         verify(mWifiMetrics).incrementNumPasspointProviderUninstallSuccess();
         verify(mAppOpsManager, never()).stopWatchingMode(
                 any(AppOpsManager.OnOpChangedListener.class));
-        verify(mWifiConfigManager).removeConnectChoiceFromAllNetworks(config.getUniqueId());
 
         // Verify content in the data source.
         assertTrue(mUserDataSource.getProviders().isEmpty());
@@ -2141,7 +2016,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         when(origProvider.getPackageName()).thenReturn(TEST_PACKAGE);
         when(mObjectFactory.makePasspointProvider(eq(origConfig), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(true), eq(mClock))).thenReturn(origProvider);
+                eq(true))).thenReturn(origProvider);
         assertTrue(mManager.addOrUpdateProvider(origConfig, TEST_CREATOR_UID, TEST_PACKAGE,
                 true, true));
         verify(mWifiMetrics).incrementNumPasspointProviderInstallation();
@@ -2161,7 +2036,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         origWifiConfig.fromWifiNetworkSuggestion = true;
         origWifiConfig.creatorUid = TEST_CREATOR_UID;
         origWifiConfig.creatorName = TEST_PACKAGE;
-        when(mWifiConfigManager.getConfiguredNetwork(origWifiConfig.getProfileKey()))
+        when(mWifiConfigManager.getConfiguredNetwork(origWifiConfig.getKey()))
                 .thenReturn(origWifiConfig);
         when(mWifiConfigManager.addOrUpdateNetwork(
                 origWifiConfig, TEST_CREATOR_UID, TEST_PACKAGE))
@@ -2169,7 +2044,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         assertTrue(mManager.addOrUpdateProvider(origConfig, TEST_CREATOR_UID, TEST_PACKAGE,
                 true, true));
         verify(mWifiConfigManager, never()).removePasspointConfiguredNetwork(
-                origWifiConfig.getProfileKey());
+                origWifiConfig.getKey());
         verify(mWifiConfigManager).addOrUpdateNetwork(
                 argThat((c) -> c.FQDN.equals(TEST_FQDN)), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE));
         verify(mWifiConfigManager).allowAutojoin(TEST_NETWORK_ID, origWifiConfig.allowAutojoin);
@@ -2189,7 +2064,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         when(newProvider.getPackageName()).thenReturn(TEST_PACKAGE);
         when(mObjectFactory.makePasspointProvider(eq(newConfig), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(true), eq(mClock))).thenReturn(newProvider);
+                eq(true))).thenReturn(newProvider);
         assertTrue(mManager.addOrUpdateProvider(newConfig, TEST_CREATOR_UID, TEST_PACKAGE,
                 true, true));
         verify(mWifiConfigManager).saveToStore(true);
@@ -2222,7 +2097,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         when(origProvider.getPackageName()).thenReturn(TEST_PACKAGE);
         when(mObjectFactory.makePasspointProvider(eq(origConfig), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(true), eq(mClock))).thenReturn(origProvider);
+                eq(true))).thenReturn(origProvider);
         assertTrue(mManager.addOrUpdateProvider(origConfig, TEST_CREATOR_UID, TEST_PACKAGE,
                 true, true));
         verify(mWifiMetrics).incrementNumPasspointProviderInstallation();
@@ -2243,7 +2118,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         PasspointProvider newProvider = createMockProvider(newConfig);
         when(mObjectFactory.makePasspointProvider(eq(newConfig), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(false), eq(mClock))).thenReturn(newProvider);
+                eq(false))).thenReturn(newProvider);
         assertTrue(mManager.addOrUpdateProvider(newConfig, TEST_CREATOR_UID, TEST_PACKAGE,
                 false, true));
         verify(mWifiConfigManager).saveToStore(true);
@@ -2275,7 +2150,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         when(origProvider.getPackageName()).thenReturn(TEST_PACKAGE);
         when(mObjectFactory.makePasspointProvider(eq(origConfig), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(false), eq(mClock))).thenReturn(origProvider);
+                eq(false))).thenReturn(origProvider);
         assertTrue(mManager.addOrUpdateProvider(origConfig, TEST_CREATOR_UID, TEST_PACKAGE, false,
                 true));
         verifyInstalledConfig(origConfig);
@@ -2300,7 +2175,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         when(newProvider.getPackageName()).thenReturn(TEST_PACKAGE1);
         when(mObjectFactory.makePasspointProvider(eq(newConfig), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE1),
-                eq(true), eq(mClock))).thenReturn(newProvider);
+                eq(true))).thenReturn(newProvider);
         assertTrue(mManager.addOrUpdateProvider(newConfig, TEST_CREATOR_UID, TEST_PACKAGE1, true,
                 true));
         verify(mWifiConfigManager).saveToStore(true);
@@ -2347,11 +2222,11 @@ public class PasspointManagerTest extends WifiBaseTest {
 
             when(mAnqpCache.getEntry(TEST_ANQP_KEY)).thenReturn(entry);
             when(InformationElementUtil.getHS2VendorSpecificIE(isNull())).thenReturn(vsa);
-            when(providerHome.match(anyMap(), isNull(), any(ScanResult.class)))
+            when(providerHome.match(anyMap(), isNull()))
                     .thenReturn(PasspointMatch.HomeProvider);
-            when(providerRoaming.match(anyMap(), isNull(), any(ScanResult.class)))
+            when(providerRoaming.match(anyMap(), isNull()))
                     .thenReturn(PasspointMatch.RoamingProvider);
-            when(providerNone.match(anyMap(), isNull(), any(ScanResult.class)))
+            when(providerNone.match(anyMap(), isNull()))
                     .thenReturn(PasspointMatch.None);
 
             List<Pair<PasspointProvider, PasspointMatch>> results =
@@ -2397,11 +2272,11 @@ public class PasspointManagerTest extends WifiBaseTest {
 
             when(mAnqpCache.getEntry(TEST_ANQP_KEY)).thenReturn(entry);
             when(InformationElementUtil.getHS2VendorSpecificIE(isNull())).thenReturn(vsa);
-            when(providerHome.match(anyMap(), isNull(), any(ScanResult.class)))
+            when(providerHome.match(anyMap(), isNull()))
                     .thenReturn(PasspointMatch.HomeProvider);
-            when(providerRoaming.match(anyMap(), isNull(), any(ScanResult.class)))
+            when(providerRoaming.match(anyMap(), isNull()))
                     .thenReturn(PasspointMatch.RoamingProvider);
-            when(providerNone.match(anyMap(), isNull(), any(ScanResult.class)))
+            when(providerNone.match(anyMap(), isNull()))
                     .thenReturn(PasspointMatch.None);
 
             List<Pair<PasspointProvider, PasspointMatch>> results =
@@ -2449,11 +2324,11 @@ public class PasspointManagerTest extends WifiBaseTest {
 
             when(mAnqpCache.getEntry(TEST_ANQP_KEY)).thenReturn(entry);
             when(InformationElementUtil.getHS2VendorSpecificIE(isNull())).thenReturn(vsa);
-            when(providerHome.match(anyMap(), isNull(), any(ScanResult.class)))
+            when(providerHome.match(anyMap(), isNull()))
                     .thenReturn(PasspointMatch.HomeProvider);
-            when(providerRoaming.match(anyMap(), isNull(), any(ScanResult.class)))
+            when(providerRoaming.match(anyMap(), isNull()))
                     .thenReturn(PasspointMatch.RoamingProvider);
-            when(providerNone.match(anyMap(), isNull(), any(ScanResult.class)))
+            when(providerNone.match(anyMap(), isNull()))
                     .thenReturn(PasspointMatch.None);
 
             List<Pair<PasspointProvider, PasspointMatch>> results =
@@ -2480,7 +2355,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         PasspointProvider provider = createMockProvider(config, wifiConfig, true);
         when(mObjectFactory.makePasspointProvider(eq(config), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(true), eq(mClock))).thenReturn(provider);
+                eq(true))).thenReturn(provider);
         when(provider.getPackageName()).thenReturn(TEST_PACKAGE);
         assertTrue(mManager.addOrUpdateProvider(
                 config, TEST_CREATOR_UID, TEST_PACKAGE, true, false));
@@ -2499,7 +2374,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         PasspointProvider provider = createMockProvider(config, wifiConfig, false);
         when(mObjectFactory.makePasspointProvider(eq(config), eq(mWifiKeyStore),
                 eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-                eq(true), eq(mClock))).thenReturn(provider);
+                eq(true))).thenReturn(provider);
         when(provider.getPackageName()).thenReturn(TEST_PACKAGE);
         assertFalse(mManager.addOrUpdateProvider(
                 config, TEST_CREATOR_UID, TEST_PACKAGE, false, false));
@@ -2515,12 +2390,12 @@ public class PasspointManagerTest extends WifiBaseTest {
         PasspointConfiguration config = mock(PasspointConfiguration.class);
         PasspointProvider mockProvider = mock(PasspointProvider.class);
         when(mObjectFactory.makePasspointProvider(config, null,
-                mWifiCarrierInfoManager, 0, 0, null, false, mClock))
+                mWifiCarrierInfoManager, 0, 0, null, false))
                 .thenReturn(mockProvider);
         List<ScanResult> scanResults = new ArrayList<>() {{
                 add(mock(ScanResult.class));
             }};
-        when(mockProvider.match(anyMap(), any(RoamingConsortium.class), any(ScanResult.class)))
+        when(mockProvider.match(anyMap(), any(RoamingConsortium.class)))
                 .thenReturn(PasspointMatch.RoamingProvider);
 
         List<ScanResult> testResults = mManager.getMatchingScanResults(config, scanResults);
@@ -2537,12 +2412,12 @@ public class PasspointManagerTest extends WifiBaseTest {
         PasspointConfiguration config = mock(PasspointConfiguration.class);
         PasspointProvider mockProvider = mock(PasspointProvider.class);
         when(mObjectFactory.makePasspointProvider(config, null,
-                mWifiCarrierInfoManager, 0, 0, null, false, mClock))
+                mWifiCarrierInfoManager, 0, 0, null, false))
                 .thenReturn(mockProvider);
         List<ScanResult> scanResults = new ArrayList<>() {{
                 add(mock(ScanResult.class));
             }};
-        when(mockProvider.match(anyMap(), any(RoamingConsortium.class), any(ScanResult.class)))
+        when(mockProvider.match(anyMap(), any(RoamingConsortium.class)))
                 .thenReturn(PasspointMatch.HomeProvider);
 
         List<ScanResult> testResults = mManager.getMatchingScanResults(config, scanResults);
@@ -2561,13 +2436,13 @@ public class PasspointManagerTest extends WifiBaseTest {
         PasspointProvider mockProvider = mock(PasspointProvider.class);
 
         when(mObjectFactory.makePasspointProvider(config, null,
-                mWifiCarrierInfoManager, 0, 0, null, false, mClock))
+                mWifiCarrierInfoManager, 0, 0, null, false))
                 .thenReturn(mockProvider);
 
         List<ScanResult> scanResults = new ArrayList<>() {{
                 add(mock(ScanResult.class));
             }};
-        when(mockProvider.match(anyMap(), any(RoamingConsortium.class), any(ScanResult.class)))
+        when(mockProvider.match(anyMap(), any(RoamingConsortium.class)))
                 .thenReturn(PasspointMatch.None);
 
         List<ScanResult> testResults = mManager.getMatchingScanResults(config, scanResults);
@@ -2609,19 +2484,18 @@ public class PasspointManagerTest extends WifiBaseTest {
 
         verify(provider1).uninstallCertsAndKeys();
         verify(mWifiConfigManager, times(1)).removePasspointConfiguredNetwork(
-                provider1.getWifiConfig().getProfileKey());
+                provider1.getWifiConfig().getKey());
         verify(provider2).uninstallCertsAndKeys();
         verify(mWifiConfigManager, times(1)).removePasspointConfiguredNetwork(
-                provider2.getWifiConfig().getProfileKey());
+                provider2.getWifiConfig().getKey());
         verify(provider3).uninstallCertsAndKeys();
         verify(mWifiConfigManager, times(1)).removePasspointConfiguredNetwork(
-                provider3.getWifiConfig().getProfileKey());
+                provider3.getWifiConfig().getKey());
 
         verify(mWifiMetrics, times(3)).incrementNumPasspointProviderUninstallation();
         verify(mWifiMetrics, times(3)).incrementNumPasspointProviderUninstallSuccess();
         verify(mAppOpsManager).stopWatchingMode(any(AppOpsManager.OnOpChangedListener.class));
         assertTrue(mManager.getProviderConfigs(TEST_CREATOR_UID, false).isEmpty());
-        verify(mWifiConfigManager, times(3)).removeConnectChoiceFromAllNetworks(any());
 
         // Verify content in the data source.
         assertTrue(mUserDataSource.getProviders().isEmpty());
@@ -2641,7 +2515,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         PasspointProvider provider = createMockProvider(config, wifiConfig, true);
         when(mObjectFactory.makePasspointProvider(eq(config), eq(mWifiKeyStore),
             eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-            eq(true), eq(mClock))).thenReturn(provider);
+            eq(true))).thenReturn(provider);
         when(provider.getPackageName()).thenReturn(TEST_PACKAGE);
         assertTrue(mManager.addOrUpdateProvider(
                 config, TEST_CREATOR_UID, TEST_PACKAGE, true, false));
@@ -2666,7 +2540,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         PasspointProvider provider = createMockProvider(config, wifiConfig, true);
         when(mObjectFactory.makePasspointProvider(eq(config), eq(mWifiKeyStore),
             eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-            eq(true), eq(mClock))).thenReturn(provider);
+            eq(true))).thenReturn(provider);
         when(provider.getPackageName()).thenReturn(TEST_PACKAGE);
         assertTrue(mManager.addOrUpdateProvider(
                 config, TEST_CREATOR_UID, TEST_PACKAGE, true, false));
@@ -2691,7 +2565,7 @@ public class PasspointManagerTest extends WifiBaseTest {
         PasspointProvider provider = createMockProvider(config, wifiConfig, true);
         when(mObjectFactory.makePasspointProvider(eq(config), eq(mWifiKeyStore),
             eq(mWifiCarrierInfoManager), anyLong(), eq(TEST_CREATOR_UID), eq(TEST_PACKAGE),
-            eq(true), eq(mClock))).thenReturn(provider);
+            eq(true))).thenReturn(provider);
         when(provider.getPackageName()).thenReturn(TEST_PACKAGE);
         assertTrue(mManager.addOrUpdateProvider(
                 config, TEST_CREATOR_UID, TEST_PACKAGE, true, false));
@@ -2699,345 +2573,4 @@ public class PasspointManagerTest extends WifiBaseTest {
         verify(mWifiMetrics).incrementNumPasspointProviderInstallation();
         verify(mWifiMetrics).incrementNumPasspointProviderInstallSuccess();
     }
-
-    /**
-     * Verify that venue URL ANQP request is sent correctly.
-     *
-     * @throws Exception
-     */
-    @Test
-    public void verifyRequestVenueUrlAnqpElement() throws Exception {
-        // static mocking
-        MockitoSession session =
-                com.android.dx.mockito.inline.extended.ExtendedMockito.mockitoSession().mockStatic(
-                        InformationElementUtil.class).startMocking();
-        try {
-            ScanResult scanResult = createTestScanResult();
-            InformationElementUtil.Vsa vsa = new InformationElementUtil.Vsa();
-            vsa.anqpDomainID = scanResult.anqpDomainId;
-            when(InformationElementUtil.getHS2VendorSpecificIE(isNull())).thenReturn(vsa);
-            long bssid = Utils.parseMac(scanResult.BSSID);
-            mManager.requestVenueUrlAnqpElement(scanResult);
-            verify(mAnqpRequestManager).requestVenueUrlAnqpElement(eq(bssid), any());
-        } finally {
-            session.finishMocking();
-        }
-    }
-
-    /**
-     * Verify blocking a matched provider following a Deauthentication-imminent WNM-notification
-     */
-    @Test
-    public void testBlockingProvider() {
-        WifiConfiguration wifiConfig = WifiConfigurationTestUtil.generateWifiConfig(10, TEST_UID,
-                "\"PasspointTestSSID\"", true, true, TEST_FQDN,
-                TEST_FRIENDLY_NAME, SECURITY_EAP);
-        wifiConfig.BSSID = TEST_BSSID_STRING;
-
-        PasspointProvider provider =
-                addTestProvider(TEST_FQDN, TEST_FRIENDLY_NAME, TEST_PACKAGE, wifiConfig, false,
-                        null);
-        WnmData event = WnmData.createDeauthImminentEvent(Utils.parseMac(TEST_BSSID_STRING), "",
-                true, 30);
-
-        mManager.handleDeauthImminentEvent(event, wifiConfig);
-        verify(provider).blockBssOrEss(eq(event.getBssid()), eq(event.isEss()),
-                eq(event.getDelay()));
-    }
-
-    /**
-     * Verify set Anonymous Identity to the right passpoint provider.
-     */
-    @Test
-    public void testSetAnonymousIdentity() {
-        WifiConfiguration wifiConfig = WifiConfigurationTestUtil.generateWifiConfig(10, TEST_UID,
-                "\"PasspointTestSSID\"", true, true, TEST_FQDN,
-                TEST_FRIENDLY_NAME, SECURITY_EAP);
-
-        PasspointProvider provider =
-                addTestProvider(TEST_FQDN, TEST_FRIENDLY_NAME, TEST_PACKAGE, wifiConfig, false,
-                        null);
-
-        wifiConfig.enterpriseConfig.setAnonymousIdentity(TEST_ANONYMOUS_IDENTITY);
-        mManager.setAnonymousIdentity(wifiConfig);
-        verify(provider).setAnonymousIdentity(TEST_ANONYMOUS_IDENTITY);
-
-
-        mManager.resetSimPasspointNetwork();
-        verify(provider).setAnonymousIdentity(null);
-        verify(mWifiConfigManager, times(3)).saveToStore(true);
-    }
-
-    /**
-     * Test set and remove user connect choice.
-     */
-    @Test
-    public void testSetUserConnectChoice() {
-        WifiConfiguration wifiConfig = WifiConfigurationTestUtil.generateWifiConfig(10, TEST_UID,
-                "\"PasspointTestSSID\"", true, true, TEST_FQDN,
-                TEST_FRIENDLY_NAME, SECURITY_EAP);
-
-        PasspointProvider provider =
-                addTestProvider(TEST_FQDN, TEST_FRIENDLY_NAME, TEST_PACKAGE, wifiConfig, false,
-                        null);
-
-        WifiConfiguration wifiConfig2 = WifiConfigurationTestUtil.generateWifiConfig(11, TEST_UID,
-                "\"PasspointTestSSID\"", true, true, TEST_FQDN2,
-                TEST_FRIENDLY_NAME, SECURITY_EAP);
-
-        PasspointProvider provider2 =
-                addTestProvider(TEST_FQDN2, TEST_FRIENDLY_NAME, TEST_PACKAGE, wifiConfig2, false,
-                        null);
-
-        WifiConfigManager.OnNetworkUpdateListener listener = mNetworkListenerCaptor.getValue();
-        reset(mWifiConfigManager);
-
-        // Set user connect choice on this passpoint network
-        listener.onConnectChoiceSet(Collections.singletonList(wifiConfig), USER_CONNECT_CHOICE,
-                TEST_RSSI);
-        verify(provider).setUserConnectChoice(USER_CONNECT_CHOICE, TEST_RSSI);
-
-        // The user connect choice is this psspoint network, its user connect choice should null
-        listener.onConnectChoiceSet(Collections.emptyList(), wifiConfig.getPasspointUniqueId(),
-                TEST_RSSI);
-        verify(provider).setUserConnectChoice(null, 0);
-
-        // Remove the user connect choice, if equals, user connect choice should set to null
-        when(provider.getConnectChoice()).thenReturn(USER_CONNECT_CHOICE);
-        listener.onConnectChoiceRemoved(USER_CONNECT_CHOICE);
-        verify(provider, times(2)).setUserConnectChoice(null, 0);
-
-        verify(provider2, never()).setUserConnectChoice(any(), anyInt());
-        verify(mWifiConfigManager, times(3)).saveToStore(true);
-    }
-
-    /*
-     * Verify that Passpoint manager returns the correct venue URL.
-     *
-     * @throws Exception
-     */
-    @Test
-    public void testGetVenueUrl() throws Exception {
-        // static mocking
-        MockitoSession session =
-                com.android.dx.mockito.inline.extended.ExtendedMockito.mockitoSession().mockStatic(
-                        InformationElementUtil.class).startMocking();
-        try {
-            ScanResult scanResult = createTestScanResult();
-            InformationElementUtil.Vsa vsa = new InformationElementUtil.Vsa();
-            vsa.anqpDomainID = scanResult.anqpDomainId;
-            when(InformationElementUtil.getHS2VendorSpecificIE(isNull())).thenReturn(vsa);
-
-            Map<ANQPElementType, ANQPElement> anqpElementMap = new HashMap<>();
-            anqpElementMap.put(ANQPElementType.ANQPDomName,
-                    new DomainNameElement(Arrays.asList(new String[]{"test.com"})));
-            List<I18Name> names = new ArrayList<>();
-            names.add(new I18Name(TEST_LOCALE_ENGLISH,
-                    new Locale.Builder().setLanguage(TEST_LOCALE_ENGLISH).build(),
-                    "Passpoint Venue"));
-            names.add(new I18Name(TEST_LOCALE_HEBREW,
-                    new Locale.Builder().setLanguage(TEST_LOCALE_HEBREW).build(), "רשת פאספוינט"));
-            anqpElementMap.put(ANQPElementType.ANQPVenueName, new VenueNameElement(names));
-
-            Map<Integer, URL> venueUrls = new HashMap<>();
-            venueUrls.put(1, new URL(TEST_VENUE_URL_ENG));
-            venueUrls.put(2, new URL(TEST_VENUE_URL_HEB));
-            anqpElementMap.put(ANQPElementType.ANQPVenueUrl, new VenueUrlElement(venueUrls));
-
-            mAnqpCache.addOrUpdateEntry(TEST_ANQP_KEY, anqpElementMap);
-            ANQPData entry = new ANQPData(mClock, anqpElementMap);
-            when(mAnqpCache.getEntry(TEST_ANQP_KEY)).thenReturn(entry);
-
-            // Test language 1
-            Locale.setDefault(new Locale(TEST_LOCALE_ENGLISH));
-            URL venueUrl = mManager.getVenueUrl(scanResult);
-            assertEquals(venueUrl.toString(), TEST_VENUE_URL_ENG);
-
-            // Test language 2
-            Locale.setDefault(new Locale(TEST_LOCALE_HEBREW));
-            venueUrl = mManager.getVenueUrl(scanResult);
-            assertEquals(venueUrl.toString(), TEST_VENUE_URL_HEB);
-
-            // Test default language when no language match
-            Locale.setDefault(new Locale(TEST_LOCALE_SPANISH));
-            venueUrl = mManager.getVenueUrl(scanResult);
-            assertEquals(venueUrl.toString(), TEST_VENUE_URL_ENG);
-        } finally {
-            session.finishMocking();
-        }
-    }
-
-    /**
-     * Verify that Passpoint manager returns null when no ANQP entry is available.
-     *
-     * @throws Exception
-     */
-    @Test
-    public void testGetVenueUrlNoAnqpEntry() throws Exception {
-        // static mocking
-        MockitoSession session =
-                com.android.dx.mockito.inline.extended.ExtendedMockito.mockitoSession().mockStatic(
-                        InformationElementUtil.class).startMocking();
-        try {
-            ScanResult scanResult = createTestScanResult();
-            InformationElementUtil.Vsa vsa = new InformationElementUtil.Vsa();
-            vsa.anqpDomainID = scanResult.anqpDomainId;
-            when(InformationElementUtil.getHS2VendorSpecificIE(isNull())).thenReturn(vsa);
-
-            when(mAnqpCache.getEntry(TEST_ANQP_KEY)).thenReturn(null);
-
-            URL venueUrl = mManager.getVenueUrl(scanResult);
-            assertNull(venueUrl);
-        } finally {
-            session.finishMocking();
-        }
-    }
-
-    /**
-     * Verify that Passpoint manager returns null when no Venue URL ANQP-element is available.
-     *
-     * @throws Exception
-     */
-    @Test
-    public void testGetVenueUrlNoVenueUrlAnqpElement() throws Exception {
-        // static mocking
-        MockitoSession session =
-                com.android.dx.mockito.inline.extended.ExtendedMockito.mockitoSession().mockStatic(
-                        InformationElementUtil.class).startMocking();
-        try {
-            ScanResult scanResult = createTestScanResult();
-            InformationElementUtil.Vsa vsa = new InformationElementUtil.Vsa();
-            vsa.anqpDomainID = scanResult.anqpDomainId;
-            when(InformationElementUtil.getHS2VendorSpecificIE(isNull())).thenReturn(vsa);
-
-            Map<ANQPElementType, ANQPElement> anqpElementMap = new HashMap<>();
-            anqpElementMap.put(ANQPElementType.ANQPDomName,
-                    new DomainNameElement(Arrays.asList(new String[]{"test.com"})));
-            List<I18Name> names = new ArrayList<>();
-            names.add(new I18Name(TEST_LOCALE_ENGLISH,
-                    new Locale.Builder().setLanguage(TEST_LOCALE_ENGLISH).build(),
-                    "Passpoint Venue"));
-            names.add(new I18Name(TEST_LOCALE_HEBREW,
-                    new Locale.Builder().setLanguage(TEST_LOCALE_HEBREW).build(), "רשת פאספוינט"));
-            anqpElementMap.put(ANQPElementType.ANQPVenueName, new VenueNameElement(names));
-
-            mAnqpCache.addOrUpdateEntry(TEST_ANQP_KEY, anqpElementMap);
-            ANQPData entry = new ANQPData(mClock, anqpElementMap);
-            when(mAnqpCache.getEntry(TEST_ANQP_KEY)).thenReturn(entry);
-
-            URL venueUrl = mManager.getVenueUrl(scanResult);
-            assertNull(venueUrl);
-        } finally {
-            session.finishMocking();
-        }
-    }
-
-    /**
-     * Verify that Passpoint manager returns null when no Venue Name ANQP-element is available.
-     *
-     * @throws Exception
-     */
-    @Test
-    public void testGetVenueUrlNoVenueNameAnqpElement() throws Exception {
-        // static mocking
-        MockitoSession session =
-                com.android.dx.mockito.inline.extended.ExtendedMockito.mockitoSession().mockStatic(
-                        InformationElementUtil.class).startMocking();
-        try {
-            ScanResult scanResult = createTestScanResult();
-            InformationElementUtil.Vsa vsa = new InformationElementUtil.Vsa();
-            vsa.anqpDomainID = scanResult.anqpDomainId;
-            when(InformationElementUtil.getHS2VendorSpecificIE(isNull())).thenReturn(vsa);
-
-            Map<ANQPElementType, ANQPElement> anqpElementMap = new HashMap<>();
-            anqpElementMap.put(ANQPElementType.ANQPDomName,
-                    new DomainNameElement(Arrays.asList(new String[]{"test.com"})));
-
-            Map<Integer, URL> venueUrls = new HashMap<>();
-            venueUrls.put(1, new URL(TEST_VENUE_URL_ENG));
-            venueUrls.put(2, new URL(TEST_VENUE_URL_HEB));
-            anqpElementMap.put(ANQPElementType.ANQPVenueUrl, new VenueUrlElement(venueUrls));
-
-            mAnqpCache.addOrUpdateEntry(TEST_ANQP_KEY, anqpElementMap);
-            ANQPData entry = new ANQPData(mClock, anqpElementMap);
-            when(mAnqpCache.getEntry(TEST_ANQP_KEY)).thenReturn(entry);
-
-            URL venueUrl = mManager.getVenueUrl(scanResult);
-            assertNull(venueUrl);
-
-            // Now try with an incomplete list of venue names
-            List<I18Name> names = new ArrayList<>();
-            names.add(new I18Name(TEST_LOCALE_ENGLISH,
-                    new Locale.Builder().setLanguage(TEST_LOCALE_ENGLISH).build(),
-                    "Passpoint Venue"));
-            anqpElementMap.put(ANQPElementType.ANQPVenueName, new VenueNameElement(names));
-            entry = new ANQPData(mClock, anqpElementMap);
-            when(mAnqpCache.getEntry(TEST_ANQP_KEY)).thenReturn(entry);
-
-            venueUrl = mManager.getVenueUrl(scanResult);
-            assertNull(venueUrl);
-        } finally {
-            session.finishMocking();
-        }
-    }
-
-    /**
-     * Verify that Passpoint manager handles the terms and conditions URL correctly: Accepts only
-     * HTTPS URLs, and rejects HTTP and invalid URLs.
-     *
-     * @throws Exception
-     */
-    @Test
-    public void testHandleTermsAndConditionsEvent() throws Exception {
-        WifiConfiguration config = WifiConfigurationTestUtil.createPasspointNetwork();
-        PasspointProvider passpointProvider = addTestProvider(TEST_FQDN, TEST_FRIENDLY_NAME,
-                TEST_PACKAGE, config, false, null);
-        assertEquals(TEST_TERMS_AND_CONDITIONS_URL, mManager.handleTermsAndConditionsEvent(
-                WnmData.createTermsAndConditionsAccetanceRequiredEvent(TEST_BSSID,
-                        TEST_TERMS_AND_CONDITIONS_URL), config).toString());
-
-        // Verify that this provider is never blocked
-        verify(passpointProvider, never()).blockBssOrEss(anyLong(), anyBoolean(), anyInt());
-
-        assertNull(mManager.handleTermsAndConditionsEvent(
-                WnmData.createTermsAndConditionsAccetanceRequiredEvent(TEST_BSSID,
-                        TEST_TERMS_AND_CONDITIONS_URL_NON_HTTPS), config));
-
-        // Verify that the ESS is blocked for 24 hours, the URL is non-HTTPS and unlikely to change
-        verify(passpointProvider).blockBssOrEss(eq(TEST_BSSID), eq(true), eq(24 * 60 * 60));
-
-        assertNull(mManager.handleTermsAndConditionsEvent(
-                WnmData.createTermsAndConditionsAccetanceRequiredEvent(TEST_BSSID,
-                        TEST_TERMS_AND_CONDITIONS_URL_INVALID), config));
-
-        // Verify that the ESS is blocked for an hour due to a temporary issue with the URL
-        verify(passpointProvider).blockBssOrEss(eq(TEST_BSSID), eq(true), eq(60 * 60));
-
-        // Now try with a non-Passpoint network
-        config = WifiConfigurationTestUtil.createEapNetwork();
-        assertNull(mManager.handleTermsAndConditionsEvent(
-                WnmData.createTermsAndConditionsAccetanceRequiredEvent(TEST_BSSID,
-                        TEST_TERMS_AND_CONDITIONS_URL), config));
-        // and a null configuration
-        assertNull(mManager.handleTermsAndConditionsEvent(
-                WnmData.createTermsAndConditionsAccetanceRequiredEvent(TEST_BSSID,
-                        TEST_TERMS_AND_CONDITIONS_URL), null));
-    }
-
-    /**
-     * Verify that Passpoint manager clears states and flushes caches as expected.
-     *
-     * @throws Exception
-     */
-    @Test
-    public void testClearAnqpRequestsAndFlushCache() throws Exception {
-        PasspointProvider provider = addTestProvider(TEST_FQDN, TEST_FRIENDLY_NAME,
-                TEST_PACKAGE, false, TEST_REALM);
-
-        mManager.clearAnqpRequestsAndFlushCache();
-        verify(mAnqpRequestManager).clear();
-        verify(mAnqpCache).flush();
-        verify(provider).clearProviderBlock();
-    }
 }
-
